<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.safe.sena.proyectovivedigital.ViveDigitalMain">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/introduction"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_list"
                    android:layout_width="185dp"
                    android:layout_height="126dp"
                    android:background="@drawable/main_list"
                    android:fontFamily="casual"
                    android:text="@string/title_btn_list"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <Button
                    android:id="@+id/btn_map"
                    android:layout_width="match_parent"
                    android:layout_height="127dp"
                    android:background="@drawable/maps"
                    android:fontFamily="casual"
                    android:text="@string/title_btn_map"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:fontFamily="casual"
                android:onClick="acercade"
                android:text="Acerca De" />


        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
